# Glamour

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
glamour/: __init__.py  build.py  critique.py  openrouter.py  render.py  server.py  synth_poc.py
static/: curate.html  history.html  index.html
tests/: test_critique.py
