[project]
name = "glamour"
version = "0.1.0"
description = "Web-design critique arena + synthetic-data engine"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "playwright>=1.44",
    "pillow>=10.0",
    "numpy>=1.26",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []
